cluster/nucleus-notifications/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nucleus-notifications
  name: nucleus-notifications
  namespace: nucleus-notifications
spec:
  strategy:
    rollingUpdate:
      # K8S rounds up to 1 in cases where the number is less than 1.
      # IE, since this only deploys one pod, it will still succesfully use rollingupdate since 0.25 rounds up to 1.
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  selector:
    matchLabels:
      app: nucleus-notifications
  template:
    metadata:
      labels:
        app: nucleus-notifications
    spec:
      imagePullSecrets:
        - name: nucleus-notifications-pull-secret
      containers:
        - name: nucleus-notifications
          image: registry.login.no/tekkom/apps/nucleus-notifications:2.3.2
          imagePullPolicy: Always
          volumeMounts:
            - name: firebase-secrets
              mountPath: /usr/src/app/secrets
              readonly: true
          livenessProbe:
            exec:
              command:
                - cat
                - /usr/src/app/tmp/healthy.txt
            initialDelaySeconds: 300
            periodSeconds: 10
          readinessProbe:
            exec:
              command:
                - cat
                - /usr/src/app/tmp/ready.txt
            initialDelaySeconds: 180
            periodSeconds: 30
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
      volumes:
        - name: firebase-secrets
          secret:
            secretName: nucleus-notifications-firebase-secrets
